--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 <head>
+  <link rel="stylesheet" href="/static/styles/common.css">
   <meta charset="UTF-8">
     <title>Education Pathways</title>
 </head>
