--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-light sticky-top">
     <div class="container-fluid">
       <a class="navbar-brand" title="Home Page" href="/">
         <img src="/static/CARTE_logo_transparent_bg.png" alt="" class="img-fluid" id="logo">
@@ -57,8 +57,8 @@
             </a>
           </li>
           <li>
-            <a class="nav-link" title="Search" href="/search">
-              <button type="button" class="btn btn-outline-dark navbar-button">
+            <a class="nav-link" title="Search" href="/results">
+              <button type="submit" class="btn btn-outline-dark navbar-button">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-search"
                   viewBox="0 0 16 16">
                   <path
