--- a/templates/course.html
+++ b/templates/course.html
@@ -57,7 +57,7 @@
             </a>
           </li>
           <li>
-            <a class="nav-link" title="Search" href="/search">
+            <a class="nav-link" title="Search" href="/">
               <button type="button" class="btn btn-outline-dark navbar-button">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-search"
                   viewBox="0 0 16 16">
