--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
             </a>
           </li>
           <li>
-            <a class="nav-link" title="Search" href="/results">
+            <a class="nav-link" title="Search" href="/">
               <button type="submit" class="btn btn-outline-dark navbar-button">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-search"
                   viewBox="0 0 16 16">
@@ -132,11 +132,11 @@
     </div>
     <div id="search-section">
 
-      <form method="post" class="common-page-form" role="form">
+      <form method="post" class="common-page-form" role="form" id="search-form">
         <div class="form-group">
           <div class="input-group input-group-lg mb-1">
             {{ form.search(class_="form-control", placeholder="Enter Search Term(s)") }}
-            <button type="submit" class="btn btn-secondary" id="button-addon2">
+            <button type="submit" class="btn btn-secondary" id="button-addon">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-search"
                 viewBox="0 0 16 16">
                 <path
