--- a/templates/index.html
+++ b/templates/index.html
@@ -10,11 +10,36 @@
 
 {% block page %}
 <div id="home-page-introduction">
-    <p>Welcome to Group 14's U of T Course Planning and Exploration Tool!</p>
-    <p>To find courses, type any term in the search bar.</p>
-    <p>Use the filters to narrow down results.</p>
+  <p>Welcome to Group 14's U of T Course Planning and Exploration Tool!</p>
+  <p>To find courses and view your degree plan, use the link in the navigation bar or the buttons below.</p>
 </div>
-<div id="search-section">
-    {% include 'search_form.html' %}
+<div id="description-section">
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="card text-center">
+        <div class="card-header">
+          <h3>Search</h3>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Find courses that you will enjoy!</h5>
+          <p class="card-text"> Look for Courses that match your interests and view
+            descriptions.</p>
+          <a href="/search" class="btn btn-secondary">Search Courses</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="card text-center">
+        <div class="card-header">
+          <h3>Plan</h3>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Plan out your degree!</h5>
+          <p class="card-text">Login to view your past, current and planned courses in your Degree Plan Profile.</p>
+          <a href="/plan" class="btn btn-secondary">View Degree Timetable</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 {% endblock %}
