Added correct information on course page from the JSON file

--- a/templates/results.html
+++ b/templates/results.html
@@ -124,7 +124,7 @@
     </nav>
     <div class="page-contents">
         <div class="common-page-heading-container">
-            <h1>Planning and Exploration Tool (PET) 2</h1>
+            <h1>Planning and Exploration Tool (PET)</h1>
         </div>
         <div id="search-section">
             {% from "_formhelpers.html" import render_field %}
