--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -54,7 +54,7 @@
 
                 <!--Search Button with Map Icon and Link to Search Page-->
                 <li>
-                    <a class="nav-link" title="Search" href="/search">
+                    <a class="nav-link" title="Search" href="/find">
                         <button type="submit" class="btn btn-outline-dark navbar-button">
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                                 class="bi bi-search" viewBox="0 0 16 16">
