--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
           <h5 class="card-title">Find courses that you will enjoy!</h5>
           <p class="card-text"> Look for Courses that match your interests and view
             descriptions.</p>
-          <a href="/search" class="btn btn-secondary">Search for Courses</a>
+          <a href="/find" class="btn btn-secondary">Search for Courses</a>
         </div>
       </div>
     </div>
