--- a/static/styles/login.css
+++ b/static/styles/login.css
@@ -3,14 +3,14 @@
   }
 
 .login-elements {
-    text-align: center;
-    width: 70vw;
+    width: 40vw;
     margin: auto;
     border-width: 1px;
     border-radius: 4px;
     border-style: solid;
     border-color: #adb8c7;
     padding: 10px;
+    color: #00204E;
     background-color: #DCDCDC;   
 }
 
