Removed "Pre Requisite For:" column of course matrix. To be updated once database access api call function is ready.

--- a/templates/course.html
+++ b/templates/course.html
@@ -95,12 +95,13 @@
                     <p><a class="btn btn-outline-dark" href='/course/{{c}}' target="_blank">{{c}}</a></p>
                     {% endfor %}
                 </td>
-                <td class="tg-0pky table-info" rowspan="3">
+                <!--Update once db function is ready-->
+                <!--<td class="tg-0pky table-info" rowspan="3">
                     <p><b>Pre-Requisite for</b></p>
                     {% for c in post %}
                     <p><a class="btn btn-outline-dark" href='/course/{{c[1]}}' target="_blank">{{c[1]}}</a></p>
                     {% endfor %}
-                </td>
+                </td>-->
                 <td class="tg-0lax table-primary">
                     <p><b>Smart Majors</b></p>
                     {% for c in majors %}
