--- a/app/templates/planner.html
+++ b/app/templates/planner.html
@@ -10,6 +10,11 @@
 
 {% block page %}
 <p>Hello {{user}}</p>
+
+<form method="post">
+    <input type="submit" name="Add" value="Add">
+</form>
+
 <div id="results-page-table-container">
     {% if tables %}
     {% for table in tables %}
