Fixed login page redirecting and added tests for views functions

--- a/app/templates/planner.html
+++ b/app/templates/planner.html
@@ -9,10 +9,10 @@
 {% endblock %}
 
 {% block page %}
-<p>Hello {{user}}</p>
+<h3>Hello {{user}}</h3>
 
 <form method="post">
-    <input type="submit" name="Add" value="Add">
+    <button type="submit" class="btn btn-secondary" id="button-addon"> Add Courses </button>
 </form>
 
 <div id="results-page-table-container">
