Updated email in nav bar button

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -86,7 +86,7 @@
 
                 <!--Email Button with Email Icon to Contact-->
                 <li>
-                    <a class="nav-link" title="email" href="mailto:alex.olson@utoronto.ca">
+                    <a class="nav-link" title="email" href="mailto:alexis.murari@mail.utoronto.ca">
                         <button type="button" class="btn btn-outline-dark navbar-button">
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                                 class="bi bi-envelope-open-fill" viewBox="0 0 16 16">
